fix: playng the next music even if it's not loaded

--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -45,4 +45,5 @@
     [currentIndex]="currentIndex()"
     [isPlaying]="isPlaying()"
     (playEvent)="handlePlay($event)"
+    (loadMore)="handlePlayerLoadMore()"
   ></app-player>
