--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -40,9 +40,14 @@
     </main>
   </div>
 
-  <app-player
-    [playlist]="songs$ | async"
-    [currentIndex]="currentIndex()"
-    [isPlaying]="isPlaying()"
-    (playEvent)="handlePlay($event)"
-  ></app-player>
+  <!-- Adicione o closeEvent aqui e use *ngIf para mostrar/ocultar -->
+  @if (currentIndex() !== -1) {
+    <app-player
+      [playlist]="songs$ | async"
+      [currentIndex]="currentIndex()"
+      [isPlaying]="isPlaying()"
+      (playEvent)="handlePlay($event)"
+      (closeEvent)="onPlayerClose()"
+    ></app-player>
+  }
+</div>
