--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -38,4 +38,10 @@
       }
     </div>
   </nav>
+  <div class="sidebar-footer">
+    <button class="btn-logout" (click)="logOut()">
+      <lucide-icon name="log-out"></lucide-icon>
+      Sair
+    </button>
+  </div>
 </aside>
