--- a/src/app/shared/components/player/player.html
+++ b/src/app/shared/components/player/player.html
@@ -22,13 +22,13 @@
         <button [ngClass]="['icon-btn', shuffle() ? 'active' : 'default']" (click)="toggleShuffle()">
           <lucide-icon name="shuffle"></lucide-icon>
         </button>
-        <button class="icon-btn" (click)="onPrev()">
+        <button class="icon-btn" (click)="onPrev()" [disabled]="!canPrev">
           <lucide-icon name="skip-back"></lucide-icon>
         </button>
         <button class="play-btn lg" (click)="onPlayPause()">
           <lucide-icon [name]="isPlaying ? 'pause' : 'play'"></lucide-icon>
         </button>
-        <button class="icon-btn" (click)="onNext()">
+        <button class="icon-btn" (click)="onNext()" [disabled]="!canNext">
           <lucide-icon name="skip-forward"></lucide-icon>
         </button>
         <button [ngClass]="['icon-btn', loop() ? 'active' : 'default']" (click)="toggleLoop()">
