feat: integrate device media controls and sync play/pause

--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -45,6 +45,7 @@
       [isPlaying]="isPlaying()"
       (playEvent)="handlePlayerIndexChange($event)"
       (closeEvent)="onPlayerClose()"
+      (playingChange)="onPlayingChange($event)"
       (loadMore)="handlePlayerLoadMore()"
     ></app-player>
   }
